--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -11,7 +11,8 @@
   <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess" />
   </configSections>
   <connectionStrings>
-    <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oratqa01.hc-sc.gc.ca)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sdv11101)));User Id=cvponl_owner;Password=cvponldmzdv" providerName="Oracle.ManagedAccess.Client" />
+    <!-- <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle7.hc.local)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=cvp)));User Id=cvponl_user;Password=cvp_dev" providerName="Oracle.ManagedAccess.Client"/>-->
+   <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oratqa01.hc-sc.gc.ca)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sdv11101)));User Id=cvponl_owner;Password=cvponldmzdv" providerName="Oracle.ManagedAccess.Client" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -21,9 +22,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-    <authentication mode="None" />
+    <compilation debug="true" targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.5"/>
+    <customErrors mode="Off" defaultRedirect="shared/GenericError.htm">
+      <error statusCode="404" redirect="shared/Error404.htm"/>
+      <error statusCode="500" redirect="shared/Error500.htm"/>
+    </customErrors>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
