--- a/cvpWebApi/cvpWebApi.csproj
+++ b/cvpWebApi/cvpWebApi.csproj
@@ -251,8 +251,6 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="dataextract\drugnames.xml" />
-    <Content Include="default.aspx" />
-    <Content Include="default_fr.aspx" />
     <Content Include="distro\4.0.19\ajax\sitemenu-en.html" />
     <Content Include="distro\4.0.19\ajax\sitemenu-fr.html" />
     <Content Include="distro\4.0.19\assets\backdrop.png" />
@@ -573,7 +571,10 @@
     <Content Include="distro\4.0.19\js\polyfills\svg.min.js.map" />
     <Content Include="distro\4.0.19\js\wet-boew.min.js.map" />
     <Content Include="distro\4.0.19\timeout.jsp" />
+    <None Include="Properties\PublishProfiles\cvp.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="index-en.html" />
+    <Content Include="index-fr.html" />
     <Content Include="js\cvpfunctions.js" />
     <Content Include="js\inspections.js" />
     <Content Include="js\jquery.xdomainrequest.min.js" />
