Fixed issues in classes and db.

--- a/cvpWebApi/cvpWebApi.csproj
+++ b/cvpWebApi/cvpWebApi.csproj
@@ -174,7 +174,7 @@
     <Compile Include="Controllers\SourceLxController.cs" />
     <Compile Include="Controllers\SeriousnessLxController.cs" />
     <Compile Include="Controllers\ReactionsController.cs" />
-    <Compile Include="Controllers\ReportLinksLxController.cs" />
+    <Compile Include="Controllers\ReportLinksController.cs" />
     <Compile Include="Controllers\OutcomeLxController.cs" />
     <Compile Include="Controllers\GenderLxController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
@@ -194,7 +194,7 @@
     <Compile Include="Models\IOutcomeLxRepository.cs" />
     <Compile Include="Models\IReportDrugIndicationRepository.cs" />
     <Compile Include="Models\IReportDrugRepository.cs" />
-    <Compile Include="Models\IReportLinksLxRepository.cs" />
+    <Compile Include="Models\IReportLinksRepository.cs" />
     <Compile Include="Models\IReportTypeLxRepository.cs" />
     <Compile Include="Models\ISeriousnessLxRepository.cs" />
     <Compile Include="Models\ISourceLxRepository.cs" />
@@ -214,8 +214,8 @@
     <Compile Include="Models\ReportDrugRepository.cs" />
     <Compile Include="Models\ReportInfo.cs" />
     <Compile Include="Models\ReportInfoRepository.cs" />
-    <Compile Include="Models\ReportLinksLx.cs" />
-    <Compile Include="Models\ReportLinksLxRepository.cs" />
+    <Compile Include="Models\ReportLinks.cs" />
+    <Compile Include="Models\ReportLinksRepository.cs" />
     <Compile Include="Models\ReportRepository.cs" />
     <Compile Include="Models\Report.cs" />
     <Compile Include="Models\DrugProductIngredient.cs" />
