add cdn support, not compiling due to version problems with MVC packages

--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -7,11 +7,11 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-
-  <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess" />
+    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess" />
+    <section name="GoC.WebTemplate" type="GoC.WebTemplate.Configurations" />
   </configSections>
   <connectionStrings>
-    <!-- <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle7.hc.local)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=cvp)));User Id=cvponl_user;Password=cvp_dev" providerName="Oracle.ManagedAccess.Client"/>-->
+   <!-- <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle7.hc.local)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=cvp)));User Id=cvponl_user;Password=cvp_dev" providerName="Oracle.ManagedAccess.Client"/>-->
    <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oratqa01.hc-sc.gc.ca)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sdv11101)));User Id=cvponl_owner;Password=cvponldmzdv" providerName="Oracle.ManagedAccess.Client" />
   </connectionStrings>
   <appSettings>
@@ -22,7 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.5.1"/>
     <httpRuntime targetFramework="4.5"/>
     <customErrors mode="Off" defaultRedirect="shared/GenericError.htm">
       <error statusCode="404" redirect="shared/Error404.htm"/>
@@ -67,6 +67,14 @@
       </providers>
     </sessionState>
   </system.web>
+  <GoC.WebTemplate version="v4_0_20" theme="gcweb" showPreContent="true" showPostContent="true" showFeedbackLink="true" showSharePageLink="true" showSearch="true" showFeatures="true" staticFilesLocation="~\GoC.WebTemplate\StaticFallbackFiles">
+    <sessionTimeOut enabled="false" inactivity="30000" reactionTime="10000" sessionalive="30000" logouturl="./" refreshCallback="" refreshCallbackUrl="./" refreshOnClick="" refreshLimit="3" method="" additionalData="">
+    </sessionTimeOut>
+    <cdn url="https://ssl-templates.services.gc.ca" environment="prod">
+    </cdn>
+    <leavingSecureSiteWarning enabled="false" redirectURL="" excludedDomains="">
+    </leavingSecureSiteWarning>
+  </GoC.WebTemplate>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
