--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -11,8 +11,8 @@
     <section name="GoC.WebTemplate" type="GoC.WebTemplate.Configurations"/>
   </configSections>
   <connectionStrings>
-    <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle7.hc.local)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=pdb_old_cvp)));User Id=cvponl_user;Password=cvp_dev" providerName="Oracle.ManagedAccess.Client"/>
-    <!--<add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oratqa01.hc-sc.gc.ca)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sdv11101)));User Id=cvponl_owner;Password=cvponldmzdv" providerName="Oracle.ManagedAccess.Client"/>-->
+    <!-- <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle7.hc.local)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=pdb_old_cvp)));User Id=cvponl_user;Password=cvp_dev" providerName="Oracle.ManagedAccess.Client"/>-->
+    <add name="cvp" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oratqa01.hc-sc.gc.ca)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sdv11101)));User Id=cvponl_owner;Password=cvponldmzdv" providerName="Oracle.ManagedAccess.Client"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
