--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -20,6 +20,10 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+
+    <add key="logFileLocation" value="C:\WebSite\api-publish\dhpr\logs\"/>
+    <add key="cvpJsonUrl" value="http://api.hres.ca/regContentV1/api-v1/regulatorydecision/?type=json"/>
+    
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
