changed connection to the api.

--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -22,7 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 
     <add key="logFileLocation" value="C:\WebSite\api-publish\dhpr\logs\"/>
-    <add key="cvpJsonUrl" value="http://api.hres.ca/regContentV1/api-v1/regulatorydecision/?type=json"/>
+    <add key="cvpJsonUrl" value="http://localhost:64591/api/report/?type=json"/>
     
   </appSettings>
   <!--
