Changes to use API.

--- a/cvpWebApi/bin/cvpWebApi.dll.config
+++ b/cvpWebApi/bin/cvpWebApi.dll.config
@@ -22,8 +22,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 
     <add key="logFileLocation" value="C:\WebSite\api-publish\dhpr\logs\"/>
-    <add key="cvpJsonUrl" value="http://api.hres.ca/regContentV1/api-v1/regulatorydecision/?type=json"/>
-    
+    <add key="reportJsonUrl" value="http://localhost:64591/api/report/?type=json"/>
+    <add key="reportDrugJsonUrl" value="http://localhost:64591/api/reportdrug/?type=json"/>
+    <add key="reactionsJsonUrl" value="http://localhost:64591/api/reactions/?type=json"/>
+
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
