--- a/cvpWebApi/cvpWebApi.csproj
+++ b/cvpWebApi/cvpWebApi.csproj
@@ -418,8 +418,10 @@
     <Content Include="bin\WebActivatorEx.dll" />
     <Content Include="bin\WebGrease.dll" />
     <Content Include="bin\WebTemplateCore.dll" />
+    <Content Include="canada-vigilance-fr.html" />
+    <Content Include="canada-vigilance-detail-fr.html" />
+    <Content Include="canada-vigilance-resultat.html" />
     <Content Include="css\hcans.css" />
-    <Content Include="dataextract\drugnames.xml" />
     <Content Include="distro\4.0.20\assets\cloud-popup-relative.png" />
     <Content Include="distro\4.0.20\assets\favicon-mobile.png" />
     <Content Include="distro\4.0.20\assets\favicon.ico" />
@@ -882,15 +884,12 @@
     <Content Include="distro\4.0.20\wet-boew\License-en.txt" />
     <Content Include="genericError.html" />
     <Content Include="Global.asax" />
-    <Content Include="dataextract\drugnames.json" />
     <Content Include="js\cvp.js" />
     <Content Include="js\dhpr.js" />
     <Content Include="js\jquery.xdomainrequest.min.js" />
     <Content Include="Libraries\GoC.WebTemplateMVC.dll" />
     <Content Include="Libraries\WebTemplateCore.dll" />
     <Content Include="canada-vigilance-detail.html" />
-    <Content Include="regulatory-decision-summary-result.html" />
-    <Content Include="regulatory-decision-summary.html" />
     <Content Include="searchReport-en.html" />
     <Content Include="searchReport_en.html" />
     <Content Include="Views\GoC.WebTemplate\ChangeLog.txt" />
@@ -911,7 +910,6 @@
     <Content Include="Views\GoC.WebTemplate\StaticFallbackFiles\gcweb\transactFooter-fr.html" />
     <Content Include="Views\GoC.WebTemplate\StaticFallbackFiles\gcweb\transactTop-en.html" />
     <Content Include="Views\GoC.WebTemplate\StaticFallbackFiles\gcweb\transactTop-fr.html" />
-    <Content Include="regulatory-decision-summary-detail.html" />
     <Content Include="canada-vigilance-result.html" />
     <Content Include="canada-vigilance.html" />
     <Content Include="Views\Shared\Error404.htm" />
