Added some navigation buttons and fixes to French sections.

--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -22,9 +22,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 
     <add key="logFileLocation" value="C:\WebSite\api-publish\dhpr\logs\"/>
-    <add key="reportJsonUrl" value="http://localhost:64591/api/report/?type=json"/>
-    <add key="reportDrugJsonUrl" value="http://localhost:64591/api/reportdrug/?type=json"/>
-    <add key="reactionsJsonUrl" value="http://localhost:64591/api/reactions/?type=json"/>
+    <add key="reportJsonUrl" value="http://localhost:64591/api-v1/report/?type=json"/>
+    <add key="reportDrugJsonUrl" value="http://localhost:64591/api-v1/reportdrug/?type=json"/>
+    <add key="reactionsJsonUrl" value="http://localhost:64591/api-v1/reactions/?type=json"/>
 
   </appSettings>
   <!--
