changed reactions to reaction

--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -24,7 +24,7 @@
     <add key="logFileLocation" value="C:\WebSite\api-publish\dhpr\logs\"/>
     <add key="reportJsonUrl" value="http://localhost:64591/api-v1/report/?type=json"/>
     <add key="reportDrugJsonUrl" value="http://localhost:64591/api-v1/reportdrug/?type=json"/>
-    <add key="reactionsJsonUrl" value="http://localhost:64591/api-v1/reactions/?type=json"/>
+    <add key="reactionsJsonUrl" value="http://localhost:64591/api-v1/reaction/?type=json"/>
 
   </appSettings>
   <!--
