--- a/cvpWebApi/cvpWebApi.csproj
+++ b/cvpWebApi/cvpWebApi.csproj
@@ -324,7 +324,7 @@
     <Compile Include="Controllers\SearchReportController.cs" />
     <Compile Include="Controllers\SourceLxController.cs" />
     <Compile Include="Controllers\SeriousnessLxController.cs" />
-    <Compile Include="Controllers\ReactionsController.cs" />
+    <Compile Include="Controllers\ReactionController.cs" />
     <Compile Include="Controllers\ReportLinksController.cs" />
     <Compile Include="Controllers\OutcomeLxController.cs" />
     <Compile Include="Controllers\GenderLxController.cs" />
@@ -353,12 +353,12 @@
     <Compile Include="Models\DrugProductIngredientRepository.cs" />
     <Compile Include="Models\IAEReportRepository.cs" />
     <Compile Include="Models\IDrugProductIngredientRepository.cs" />
-    <Compile Include="Models\IReactionsRepository.cs" />
+    <Compile Include="Models\IReactionRepository.cs" />
     <Compile Include="Models\IReportInfoRepository.cs" />
     <Compile Include="Models\IReportRepository.cs" />
     <Compile Include="Models\OutcomeLxRepository.cs" />
-    <Compile Include="Models\Reactions.cs" />
-    <Compile Include="Models\ReactionsRepository.cs" />
+    <Compile Include="Models\Reaction.cs" />
+    <Compile Include="Models\ReactionRepository.cs" />
     <Compile Include="Models\ReportDrug.cs" />
     <Compile Include="Models\ReportDrugIndication.cs" />
     <Compile Include="Models\ReportDrugIndicationRepository.cs" />
