Renamed all the fields to follow standard.

--- a/cvpWebApi/cvpWebApi.csproj
+++ b/cvpWebApi/cvpWebApi.csproj
@@ -318,16 +318,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AEReportController.cs" />
-    <Compile Include="Controllers\ReportDrugIndicationController.cs" />
     <Compile Include="Controllers\ReportDrugController.cs" />
-    <Compile Include="Controllers\ReportTypeLxController.cs" />
+    <Compile Include="Controllers\ReportTypeController.cs" />
     <Compile Include="Controllers\SearchReportController.cs" />
-    <Compile Include="Controllers\SourceLxController.cs" />
-    <Compile Include="Controllers\SeriousnessLxController.cs" />
+    <Compile Include="Controllers\SourceController.cs" />
+    <Compile Include="Controllers\SeriousnessController.cs" />
     <Compile Include="Controllers\ReactionController.cs" />
     <Compile Include="Controllers\ReportLinkController.cs" />
-    <Compile Include="Controllers\OutcomeLxController.cs" />
-    <Compile Include="Controllers\GenderLxController.cs" />
+    <Compile Include="Controllers\OutcomeController.cs" />
+    <Compile Include="Controllers\GenderController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\DrugProductController.cs" />
     <Compile Include="Controllers\DrugProductIngredientController.cs" />
@@ -339,29 +338,27 @@
     </Compile>
     <Compile Include="Models\AEReport.cs" />
     <Compile Include="Models\AEReportRepository.cs" />
-    <Compile Include="Models\GenderLx.cs" />
-    <Compile Include="Models\GenderLxRepository.cs" />
-    <Compile Include="Models\IGenderLxRepository.cs" />
-    <Compile Include="Models\IOutcomeLxRepository.cs" />
+    <Compile Include="Models\Gender.cs" />
+    <Compile Include="Models\GenderRepository.cs" />
+    <Compile Include="Models\IGenderRepository.cs" />
+    <Compile Include="Models\IOutcomeRepository.cs" />
     <Compile Include="Models\IReportDrugIndicationRepository.cs" />
     <Compile Include="Models\IReportDrugRepository.cs" />
     <Compile Include="Models\IReportLinkRepository.cs" />
-    <Compile Include="Models\IReportTypeLxRepository.cs" />
-    <Compile Include="Models\ISeriousnessLxRepository.cs" />
-    <Compile Include="Models\ISourceLxRepository.cs" />
-    <Compile Include="Models\OutcomeLx.cs" />
+    <Compile Include="Models\IReportTypeRepository.cs" />
+    <Compile Include="Models\ISeriousnessRepository.cs" />
+    <Compile Include="Models\ISourceRepository.cs" />
+    <Compile Include="Models\Outcome.cs" />
     <Compile Include="Models\DrugProductIngredientRepository.cs" />
     <Compile Include="Models\IAEReportRepository.cs" />
     <Compile Include="Models\IDrugProductIngredientRepository.cs" />
     <Compile Include="Models\IReactionRepository.cs" />
     <Compile Include="Models\IReportInfoRepository.cs" />
     <Compile Include="Models\IReportRepository.cs" />
-    <Compile Include="Models\OutcomeLxRepository.cs" />
+    <Compile Include="Models\OutcomeRepository.cs" />
     <Compile Include="Models\Reaction.cs" />
     <Compile Include="Models\ReactionRepository.cs" />
     <Compile Include="Models\ReportDrug.cs" />
-    <Compile Include="Models\ReportDrugIndication.cs" />
-    <Compile Include="Models\ReportDrugIndicationRepository.cs" />
     <Compile Include="Models\ReportDrugRepository.cs" />
     <Compile Include="Models\ReportInfo.cs" />
     <Compile Include="Models\ReportInfoRepository.cs" />
@@ -373,12 +370,12 @@
     <Compile Include="Models\DrugProduct.cs" />
     <Compile Include="Models\DrugProductRepository.cs" />
     <Compile Include="Models\IDrugProductRepository.cs" />
-    <Compile Include="Models\ReportTypeLx.cs" />
-    <Compile Include="Models\ReportTypeLxRepository.cs" />
-    <Compile Include="Models\SeriousnessLx.cs" />
-    <Compile Include="Models\SeriousnessLxRepository.cs" />
-    <Compile Include="Models\SourceLx.cs" />
-    <Compile Include="Models\SourceLxRepository.cs" />
+    <Compile Include="Models\ReportType.cs" />
+    <Compile Include="Models\ReportTypeRepository.cs" />
+    <Compile Include="Models\Seriousness.cs" />
+    <Compile Include="Models\SeriousnessRepository.cs" />
+    <Compile Include="Models\Source.cs" />
+    <Compile Include="Models\SourceRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
