--- a/cvpWebApi/Web.config
+++ b/cvpWebApi/Web.config
@@ -98,6 +98,7 @@
     </handlers>
   </system.webServer>
   <runtime>
+    <gcAllowVeryLargeObjects enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089"/>
