--- a/cvpWebApi/packages.config
+++ b/cvpWebApi/packages.config
@@ -27,6 +27,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="NLog" version="4.6.3" targetFramework="net461" />
+  <package id="NLog.Config" version="4.6.3" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.6.3" targetFramework="net461" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
