--- a/cvpWebApi/NLog.config
+++ b/cvpWebApi/NLog.config
@@ -9,7 +9,7 @@
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-  <variable name="appName" value="CNF API"/>
+  <variable name="appName" value="CVP API"/>
 
   <!--
   See https://github.com/nlog/nlog/wiki/Configuration-file
